Fixes broken nav-menu scrolling on mobile in HxSidebar

--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
@@ -7,6 +7,10 @@
 	background-color: var(--hx-sidebar-background-color);
 }
 
+.nav-menu {
+	max-height: 100vh;
+}
+
 .hx-sidebar.collapsed {
 	flex-basis: var(--hx-sidebar-collapsed-width);
 	min-width: auto;
